// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaskedInput should render without throwing an error 1`] = `
<MonthDayDropdown
  fieldName="test"
  values={
    Object {
      "day": 1,
      "month": 1,
    }
  }
>
  <Menu
    compact={true}
  >
    <div
      className="ui compact menu"
    >
      <Dropdown
        additionLabel="Add "
        additionPosition="top"
        className="link item"
        closeOnBlur={true}
        deburr={false}
        icon=""
        minCharacters={1}
        noResultsMessage="No results found."
        openOnFocus={true}
        renderLabel={[Function]}
        scrolling={true}
        searchInput="text"
        selectOnBlur={true}
        selectOnNavigation={true}
        text="Month"
        wrapSelection={true}
      >
        <Ref
          innerRef={
            Object {
              "current": <div
                aria-expanded="false"
                class="ui scrolling dropdown link item"
                role="listbox"
                tabindex="0"
              >
                <div
                  aria-live="polite"
                  class="text"
                  role="alert"
                >
                  Month
                </div>
                <i
                  aria-hidden="true"
                  class="icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    class="item"
                    role="option"
                  >
                    January
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    February
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    March
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    April
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    May
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    June
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    July
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    August
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    September
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    October
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    November
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    December
                  </div>
                </div>
              </div>,
            }
          }
        >
          <RefFindNode
            innerRef={
              Object {
                "current": <div
                  aria-expanded="false"
                  class="ui scrolling dropdown link item"
                  role="listbox"
                  tabindex="0"
                >
                  <div
                    aria-live="polite"
                    class="text"
                    role="alert"
                  >
                    Month
                  </div>
                  <i
                    aria-hidden="true"
                    class="icon"
                  />
                  <div
                    class="menu transition"
                  >
                    <div
                      class="item"
                      role="option"
                    >
                      January
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      February
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      March
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      April
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      May
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      June
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      July
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      August
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      September
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      October
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      November
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      December
                    </div>
                  </div>
                </div>,
              }
            }
          >
            <div
              aria-expanded={false}
              className="ui scrolling dropdown link item"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              role="listbox"
              tabIndex={0}
            >
              <div
                aria-live="polite"
                className="text"
                role="alert"
              >
                Month
              </div>
              <Icon
                as="i"
                className=""
                name=""
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="icon"
                  onClick={[Function]}
                />
              </Icon>
              <DropdownMenu
                className=""
                key="month"
              >
                <div
                  className="menu transition"
                >
                  <DropdownItem
                    key="January"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      January
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="February"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      February
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="March"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      March
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="April"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      April
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="May"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      May
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="June"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      June
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="July"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      July
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="August"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      August
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="September"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      September
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="October"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      October
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="November"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      November
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="December"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      December
                    </div>
                  </DropdownItem>
                </div>
              </DropdownMenu>
            </div>
          </RefFindNode>
        </Ref>
      </Dropdown>
      <Transition
        animation="flash"
        duration={900}
        mountOnShow={true}
        transitionOnMount={false}
        unmountOnHide={false}
        visible={true}
      >
        <Dropdown
          additionLabel="Add "
          additionPosition="top"
          className="flash link item"
          closeOnBlur={true}
          deburr={false}
          disabled={true}
          icon=""
          minCharacters={1}
          noResultsMessage="No results found."
          openOnFocus={true}
          renderLabel={[Function]}
          scrolling={true}
          searchInput="text"
          selectOnBlur={true}
          selectOnNavigation={true}
          style={
            Object {
              "animationDuration": undefined,
            }
          }
          text="Day"
          wrapSelection={true}
        >
          <Ref
            innerRef={
              Object {
                "current": <div
                  aria-disabled="true"
                  aria-expanded="false"
                  class="ui disabled scrolling dropdown flash link item"
                  role="listbox"
                  tabindex="-1"
                >
                  <div
                    aria-live="polite"
                    class="text"
                    role="alert"
                  >
                    Day
                  </div>
                  <i
                    aria-hidden="true"
                    class="icon"
                  />
                  <div
                    class="menu transition"
                  />
                </div>,
              }
            }
          >
            <RefFindNode
              innerRef={
                Object {
                  "current": <div
                    aria-disabled="true"
                    aria-expanded="false"
                    class="ui disabled scrolling dropdown flash link item"
                    role="listbox"
                    tabindex="-1"
                  >
                    <div
                      aria-live="polite"
                      class="text"
                      role="alert"
                    >
                      Day
                    </div>
                    <i
                      aria-hidden="true"
                      class="icon"
                    />
                    <div
                      class="menu transition"
                    />
                  </div>,
                }
              }
            >
              <div
                aria-disabled={true}
                aria-expanded={false}
                className="ui disabled scrolling dropdown flash link item"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                role="listbox"
                style={
                  Object {
                    "animationDuration": undefined,
                  }
                }
                tabIndex={-1}
              >
                <div
                  aria-live="polite"
                  className="text"
                  role="alert"
                >
                  Day
                </div>
                <Icon
                  as="i"
                  className=""
                  name=""
                  onClick={[Function]}
                >
                  <i
                    aria-hidden="true"
                    className="icon"
                    onClick={[Function]}
                  />
                </Icon>
                <DropdownMenu
                  className=""
                  key="day"
                >
                  <div
                    className="menu transition"
                  />
                </DropdownMenu>
              </div>
            </RefFindNode>
          </Ref>
        </Dropdown>
      </Transition>
    </div>
  </Menu>
</MonthDayDropdown>
`;

exports[`MaskedInput should render without values without throwing an error 1`] = `
<MonthDayDropdown
  fieldName="test"
  values={Object {}}
>
  <Menu
    compact={true}
  >
    <div
      className="ui compact menu"
    >
      <Dropdown
        additionLabel="Add "
        additionPosition="top"
        className="link item"
        closeOnBlur={true}
        deburr={false}
        icon=""
        minCharacters={1}
        noResultsMessage="No results found."
        openOnFocus={true}
        renderLabel={[Function]}
        scrolling={true}
        searchInput="text"
        selectOnBlur={true}
        selectOnNavigation={true}
        text="Month"
        wrapSelection={true}
      >
        <Ref
          innerRef={
            Object {
              "current": <div
                aria-expanded="false"
                class="ui scrolling dropdown link item"
                role="listbox"
                tabindex="0"
              >
                <div
                  aria-live="polite"
                  class="text"
                  role="alert"
                >
                  Month
                </div>
                <i
                  aria-hidden="true"
                  class="icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    class="item"
                    role="option"
                  >
                    January
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    February
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    March
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    April
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    May
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    June
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    July
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    August
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    September
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    October
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    November
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    December
                  </div>
                </div>
              </div>,
            }
          }
        >
          <RefFindNode
            innerRef={
              Object {
                "current": <div
                  aria-expanded="false"
                  class="ui scrolling dropdown link item"
                  role="listbox"
                  tabindex="0"
                >
                  <div
                    aria-live="polite"
                    class="text"
                    role="alert"
                  >
                    Month
                  </div>
                  <i
                    aria-hidden="true"
                    class="icon"
                  />
                  <div
                    class="menu transition"
                  >
                    <div
                      class="item"
                      role="option"
                    >
                      January
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      February
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      March
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      April
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      May
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      June
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      July
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      August
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      September
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      October
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      November
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      December
                    </div>
                  </div>
                </div>,
              }
            }
          >
            <div
              aria-expanded={false}
              className="ui scrolling dropdown link item"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              role="listbox"
              tabIndex={0}
            >
              <div
                aria-live="polite"
                className="text"
                role="alert"
              >
                Month
              </div>
              <Icon
                as="i"
                className=""
                name=""
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="icon"
                  onClick={[Function]}
                />
              </Icon>
              <DropdownMenu
                className=""
                key="month"
              >
                <div
                  className="menu transition"
                >
                  <DropdownItem
                    key="January"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      January
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="February"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      February
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="March"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      March
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="April"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      April
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="May"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      May
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="June"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      June
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="July"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      July
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="August"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      August
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="September"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      September
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="October"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      October
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="November"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      November
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="December"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      December
                    </div>
                  </DropdownItem>
                </div>
              </DropdownMenu>
            </div>
          </RefFindNode>
        </Ref>
      </Dropdown>
      <Transition
        animation="flash"
        duration={900}
        mountOnShow={true}
        transitionOnMount={false}
        unmountOnHide={false}
        visible={true}
      >
        <Dropdown
          additionLabel="Add "
          additionPosition="top"
          className="flash link item"
          closeOnBlur={true}
          deburr={false}
          disabled={true}
          icon=""
          minCharacters={1}
          noResultsMessage="No results found."
          openOnFocus={true}
          renderLabel={[Function]}
          scrolling={true}
          searchInput="text"
          selectOnBlur={true}
          selectOnNavigation={true}
          style={
            Object {
              "animationDuration": undefined,
            }
          }
          text="Day"
          wrapSelection={true}
        >
          <Ref
            innerRef={
              Object {
                "current": <div
                  aria-disabled="true"
                  aria-expanded="false"
                  class="ui disabled scrolling dropdown flash link item"
                  role="listbox"
                  tabindex="-1"
                >
                  <div
                    aria-live="polite"
                    class="text"
                    role="alert"
                  >
                    Day
                  </div>
                  <i
                    aria-hidden="true"
                    class="icon"
                  />
                  <div
                    class="menu transition"
                  />
                </div>,
              }
            }
          >
            <RefFindNode
              innerRef={
                Object {
                  "current": <div
                    aria-disabled="true"
                    aria-expanded="false"
                    class="ui disabled scrolling dropdown flash link item"
                    role="listbox"
                    tabindex="-1"
                  >
                    <div
                      aria-live="polite"
                      class="text"
                      role="alert"
                    >
                      Day
                    </div>
                    <i
                      aria-hidden="true"
                      class="icon"
                    />
                    <div
                      class="menu transition"
                    />
                  </div>,
                }
              }
            >
              <div
                aria-disabled={true}
                aria-expanded={false}
                className="ui disabled scrolling dropdown flash link item"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                role="listbox"
                style={
                  Object {
                    "animationDuration": undefined,
                  }
                }
                tabIndex={-1}
              >
                <div
                  aria-live="polite"
                  className="text"
                  role="alert"
                >
                  Day
                </div>
                <Icon
                  as="i"
                  className=""
                  name=""
                  onClick={[Function]}
                >
                  <i
                    aria-hidden="true"
                    className="icon"
                    onClick={[Function]}
                  />
                </Icon>
                <DropdownMenu
                  className=""
                  key="day"
                >
                  <div
                    className="menu transition"
                  />
                </DropdownMenu>
              </div>
            </RefFindNode>
          </Ref>
        </Dropdown>
      </Transition>
    </div>
  </Menu>
</MonthDayDropdown>
`;
